$Id$

2006-08-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c, isakmp.c: Changed random number implementation to use
	  the mersenne twister functions from mt19937ar.c rather than the
	  standard rand() from the C library.

	  This improves the quality of the random numbers, as some C library
	  rand() functions are very bad.  More importantly, it makes the
	  random number generation process repeatable across different
	  platforms.

	* mt19937ar.c: Mersenne Twister random number generator source.

	* utils.c: New functions random_byte() and random_ip(), which use
	  the mersenne twister random number functions.

2006-08-04 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c, ike-scan.h: Added new --randsrc option for source IP
	  spoofing.

	* ike-scan.c, ike-scan.h: Added new --shownum option to display the
	  return packet number.  This is useful when looking for DoS
          conditions.

2006-08-02 Roy Hills <Roy.Hills@nta-monitor.com>

	* ike-scan.c: Added experimental support for source IP spoofing.
	  Currently, this only works on Linux.

	* ip.h, udp.h: New header files to support IP spoofing.  Copied
	  from the GNU C Library.

	* configure.ac: incremented version number to 1.8.2

2006-07-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac, ike-scan.c: Removed initial lookup and configure
	  option --enable-lookup to control it.  This is legacy code
	  that has never been required.

	* ike-scan.h, ike-scan.c: Removed low-pass filter in timing
	  error correction code, and associated ALPHA macro.  This had
	  never been used, and tests indicate that it performed worse
	  than the standard timing error correction code.

	* psk-crack.c: Free malloc'ed data when we are finished with
	  each PSK to prevent a memory leak when cracking many PSKs.
	  Thanks to Antoine Brodin for finding and reporting this bug.

2006-06-24 Roy Hills <Roy.Hills@nta-monitor.com>

	* utils.c: Changed printable() and hexstring() to make the first